--- a/style.css
+++ b/style.css
@@ -27,6 +27,11 @@ p {
   color: rgb(52, 52, 52);
 }
 
+h2 {
+  text-align: center;
+  margin-bottom: 10px;
+}
+
 #guess-colors {
   display: flex;
   align-items: center;
@@ -36,7 +41,6 @@ p {
 #guess-colors .ball {
   width: 80px;
   height: 80px;
-  /* background-color: red; */
   margin-right: 15px;
   border-radius: 50%;
 }
