--- a/style.css
+++ b/style.css
@@ -1,4 +1,14 @@
-.ball {
+body {
+  text-align: center;
+}
+.contain-ball {
+  display: flex;
+  justify-content: center;
+}
+.ball {  
+  margin: 5px;
+  width: 50px;
+  height: 50px;
   border: 1px solid black;
   border-radius: 50%;
 }
