--- a/style.css
+++ b/style.css
@@ -34,15 +34,32 @@
 #answer {
   display: flex;
   justify-content: center;
-  margin-top: 20px;
+  margin-top: 30px;
 }
 
 .selected {
-  border: 4px solid pink;
+  border: 4px solid red;
 }
 
 #reset-game {
   display: flex;
   justify-content: center;
   padding: 5px;
+}
+
+#botao {
+  display: flex;
+  justify-content: center;
+  margin-top: 30px;
+}
+
+#cores {
+  display: flex;
+  justify-content: center;
+}
+
+#rgb {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
 }
