--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
 #rgb-color {
   display: flex;
   justify-content: center;
-  height: 85px;
+  height: 45px;
 }
 
 #paleta-de-cores {
@@ -62,4 +62,14 @@
   display: flex;
   align-items: center;
   flex-direction: column;
+}
+
+#placar {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 20px;
+}
+
+#score {
+  margin-left: 5px;
 }
